versioned_docs/version-7.0/kb/waf/waf.md
---
sidebar_position: 0
---

# WAF/WAAP

This section describes the knowledge base of how to use Haltdos WAF / WAAP to adequately protect Web & API applications.  

Some of the WAF use cases are mentioned below:

1. [Configuring HTTP Redirection](./kb-1001.md)
2. [Configure Machine Learning for 0-day protection](./kb-1002.md)
3. [How to add custom headers for origin servers ?](./kb-1003.md)
4. [Sending custom header or cookies to the client](./kb-1004.md)
5. [Configuring multiple security profiles for complex applications](./kb-1005.md)
6. [Adding Health monitoring on backend servers](./kb-1006.md)
7. [Selecting appropriate Server Group based on the incoming request](./kb-1007.md)
8. [Configuring secure File upload](./kb-1008.md)
9. [Configuring passwords by enabling organization-specific password policy.](./kb-1009.md)
10. [Configuring AV Scanner for an application behind WAF](./kb-1010.md)
11. [Masking login credentials like passwords](./kb-1011.md)
12. [Preemptive bot protection by WAF](./kb-1012.md)
13. [Securing websites from brute force attack](./kb-1013.md)
14. [How to enable IPv6 support in the listener.](./kb-1014.md)
15. [How to configure custom HTML error page received from Haltdos Web Application Firewall.](./kb-1015.md)
16. [How do I configure a Syslog server on Haltdos WAF?](./kb-1016.md)
17. [How to check Incident details in Haltdos WAF plateform?](./kb-1017.md)
18. [How to change Web Application Firewall mode in between Record, Bypass & Mitigation? ](./kb-1018.md)
19. [How can user restrict the file upload of any particular file extension? ](./kb-1019.md)
20. [How to add custom listener ports post creating the listner?](./kb-1020.md)
21. [How to allow access to only few IPs for backend web application? ](./kb-1021.md)
22. [How to change temperory blacklist duration? ](./kb-1022.md)
23. [How to change load balancing algorithem for any server group?](./kb-1023.md)
24. [How to add a new server? ](./kb-1024.md)
25. [How to create/add a new server group in a listener? ](./kb-1025.md)
26. [How to mark any server as down true (soft down)? ](./kb-1026.md)
27. [How to mark any server as backup server? ](./kb-1027.md)
28. [How to upload SSL certificate and use them for a web application (listener)?](./kb-1028.md)
29. [How to add a custom security profile? ](./kb-1029.md)
30. [How to mitigate bad reputation traffic with Haltdos WAF? ](./kb-1030.md)
31. [How to whitelist any IP or IP segment for a listener?](./kb-1031.md)
32. [Modifying default signature status.](./kb-1032.md)
33. [How to configure JSON policies?](./kb-1033.md)
34. [How to configure the allowed HTTP methods?](./kb-1034.md)
35. [How to configure bot protection settings in order to ensure protection from reconnaissance and scraping activities?](./kb-1035.md)
36. [How to configure Blacklist and Whitelist IP addresses?](./kb-1036.md)
37. [How to allow/block and add suspicious crawlers?](./kb-1037.md)
38. [How to rate limit the end user requests?](./kb-1038.md)
39. [How to configure web extensions and restricted extensions and validation?](./kb-1039.md)
40. [Mitigating XSS attack](./kb-1040.md)
41. [Mitigating SQL injection attack](./kb-1041.md)
42. [How do user set maximum HTTP body and header size ?](./kb-1042.md)
43. [How to set/change the keep-alive timeout for server and client?](./kb-1043.md)
44. [Condition based redirection.](./kb-1044.md)
45. [How to set maximum allowed Bot request rate from a single client IP?](./kb-1045.md)
46. [How to set mitigation for Path/Directory traversal attack?](./kb-1046.md)
47. [How to set mitigation for OS command Injection?](./kb-1047.md)
48. [How to add client certificates?](./kb-1048.md)
49. [How to add a listener?](./kb-1049.md)
50. [How a user extract or set a custom variable by using Variable Rules in Haltdos WAF?](./kb-1050.md)
51. [How to make form rule to offers a positive security model for Application Firewall ?](./kb-1051.md)
52. [How to make Firewall rules that allow client to create custom security rules as per application logic?](./kb-1052.md)
53. [How the rate limit rule restrict over-usage of client application by throttling requests on matching users?](./kb-1053.md)
54. [How Whitelist rule allows to add exceptions on existing rules (custom and managed)?](./kb-1054.md)
55. [How to create a response rule to filter responses from applications and prevent sensitive data leaks?](./kb-1055.md)
56. [How to configure NTP through Haltdos Solution?](./kb-1056.md)
57. [How to mask sensitive data content like CCN/SSN?](./kb-1057.md)
58. [How to prevent sites from XML Bomb attack?](./kb-1058.md)
59. [How to prevent Cross-site Request Forgery through Haltdos WAF?](./kb-1059.md)
60. [How to configure TLS and SSL versions from Haltdos console?](./kb-1060.md)
61. [How to prevent sites from JSON injection?](./kb-1061.md)
62. [How to achieve better performance through Haltdos WAF?](./kb-1062.md)
63. [How WAF mitigate RCE attacks?](./kb-1063.md)
64. [How to whitelist request based on particular pattern?](./kb-1064.md)
65. [How to set rule staging from Haltdos console for managing Signatures?](./kb-1065.md)
66. [How to check the backend server down incident on Haltdos console?](./kb-1066.md)
67. [How to configure IP transparency through Haltdos Solution?](./kb-1067.md)
68. [Why do we need to configure web application to accept traffic from WAF only?](./kb-1068.md)
69. [Generate/Issue SSL certificate using Let's Encrypt](./kb-1069)
70. [Renew SSL Certificate using Let's Encrypt HTTP Challenge](./kb-1070)